.provarCaches/00D410000011HE0EAM/objects/BF_VAT_Declaration_detail_transaction__c.object
<CustomObject>
    <fields>
        <fullName>Apex_ID__c</fullName>
        <description>Field used as external ID in Apex class</description>
        <externalId>true</externalId>
        <label>Apex ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BF_VAT_Declaration_detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BF VAT Declaration detail</label>
        <referenceTo>BF_VAT_Declaration_details__c</referenceTo>
        <relationshipLabel>BF VAT Declaration detail transactions</relationshipLabel>
        <relationshipName>BF_VAT_Declaration_detail_transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_Amount__c</fullName>
        <formula>VAT_Transaction__r.BF_VAT_base_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declaration__c</fullName>
        <formula>BF_VAT_Declaration_detail__r.BF_VAT_Declaration__r.BF_Setup_VAT_Declaration__r.Name &amp; &quot;-&quot; &amp; BF_VAT_Declaration_detail__r.BF_VAT_Declaration__r.Periode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Declaration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <formula>BF_VAT_Declaration_detail__r.BF_Setup_VAT_Declaration_line_detail__r.BF_Setup_VAT_Declaration_line__r.Line_code__c &amp; &quot; &quot; &amp; BF_VAT_Declaration_detail__r.BF_Setup_VAT_Declaration_line_detail__r.BF_Setup_VAT_Declaration_line__r.Line_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VAT Transaction</label>
        <referenceTo>rstkf__syvattxn__c</referenceTo>
        <relationshipLabel>BF VAT Declaration detail transactions</relationshipLabel>
        <relationshipName>BF_VAT_Declaration_detail_transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VAT_amount__c</fullName>
        <formula>VAT_Transaction__r.BF_VAT_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>BF VAT Declaration detail transaction</label>
    <nameField>
        <displayFormat>DT{0000000000}</displayFormat>
        <label>BF VAT Declaration detail transaction Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BF VAT Declaration detail transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>